cleanup + some comments